# chess-engine

./: .gitignore  CMakeLists.txt  README.md
SeggzEngine/: SeggzEngine.cpp  SeggzEngine.sln  SeggzEngine.vcxproj  SeggzEngine.vcxproj.filters
SeggzEngine/Debug/: SeggzEngine.exe.recipe  SeggzEngine.ilk  SeggzEngine.vcxproj.FileListAbsolute.txt  vc142.idb
SeggzEngine/Debug/SeggzEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SeggzEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lib/thc/: thc.cpp  thc.h
src/: evaluate.cpp  evaluate.h  evuluate.h  hash.cpp  hash.h  main.cpp  search.cpp  search.h  test.cpp  test.h  timeman.cpp  timeman.h  uci.cpp  uci.h
